--- a/package.json
+++ b/package.json
@@ -14,6 +14,9 @@
     "brain-games": "bin/brain-games.js"
   },
   "type": "module",
+  "dependencies": {
+    "readline-sync": "^1.4.10"
+  },
   "keywords": [
     "hexlet",
     "js"
