--- a/package.json
+++ b/package.json
@@ -26,5 +26,11 @@
   "bugs": {
     "url": "https://github.com/MadButterfly/frontend-project-lvl1/issues"
   },
-  "homepage": "https://github.com/MadButterfly/frontend-project-lvl1#readme"
+  "homepage": "https://github.com/MadButterfly/frontend-project-lvl1#readme",
+  "devDependencies": {
+    "babel-eslint": "^10.0.3",
+    "eslint": "^6.8.0",
+    "eslint-config-airbnb-base": "^14.0.0",
+    "eslint-plugin-import": "^2.20.1"
+  }
 }
