--- a/.github/workflows/nodejs.yml
+++ b/.github/workflows/nodejs.yml
@@ -19,8 +19,6 @@ jobs:
         node-version: ${{ matrix.node-version }}
     - name: npm install, build and test
       run: |
-        make install
-        make build
-        make test
+        make lint
       env:
         CI: true
